--- a/moreco-oss/pom.xml
+++ b/moreco-oss/pom.xml
@@ -11,8 +11,19 @@
 
     <artifactId>moreco-oss</artifactId>
     <packaging>pom</packaging>
-    <modules>
 
-    </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
