--- a/moreco-rbac/pom.xml
+++ b/moreco-rbac/pom.xml
@@ -29,6 +29,10 @@
             <groupId>io.github.weechang</groupId>
             <artifactId>moreco-base</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.weechang</groupId>
+            <artifactId>moreco-security-base</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
