--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,9 @@
         <commons.lang.version>2.6</commons.lang.version>
         <jutil.version>1.0.0-SNAPSHOT</jutil.version>
         <shiro.version>1.4.0</shiro.version>
+        <qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
+        <aliyun.oss.version>2.5.0</aliyun.oss.version>
+        <qcloud.cos.version>4.4</qcloud.cos.version>
     </properties>
 
     <dependencyManagement>
@@ -59,6 +62,11 @@
             <dependency>
                 <groupId>io.github.weechang</groupId>
                 <artifactId>moreco-rbac</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.weechang</groupId>
+                <artifactId>moreco-security-base</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -125,6 +133,29 @@
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-spring</artifactId>
                 <version>${shiro.version}</version>
+            </dependency>
+
+            <!--oss-->
+            <dependency>
+                <groupId>com.qiniu</groupId>
+                <artifactId>qiniu-java-sdk</artifactId>
+                <version>${qiniu.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun.oss.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${qcloud.cos.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!--others-->
