--- a/moreco-monitor/moreco-monitor-core/pom.xml
+++ b/moreco-monitor/moreco-monitor-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>moreco-monitor-method</artifactId>
+    <artifactId>moreco-monitor-core</artifactId>
 
 
 </project>
