--- a/moreco-monitor/moreco-monitor-manager/pom.xml
+++ b/moreco-monitor/moreco-monitor-manager/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>moreco-monitor-app</artifactId>
+    <artifactId>moreco-monitor-manager</artifactId>
 
 
 </project>
