--- a/moreco-monitor/pom.xml
+++ b/moreco-monitor/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>moreco-monitor</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>moreco-monitor-computer</module>
-        <module>moreco-monitor-app</module>
-        <module>moreco-monitor-method</module>
-        <module>moreco-monitor-redis</module>
+
+        <module>moreco-monitor-manager</module>
+        <module>moreco-monitor-sdk</module>
+        <module>moreco-monitor-core</module>
     </modules>
 
 
