--- a/moreco-security/pom.xml
+++ b/moreco-security/pom.xml
@@ -37,9 +37,8 @@
         </dependency>
         <!--JWT-->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
         </dependency>
     </dependencies>
 
