--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,6 @@
         <mssql.version>4.0</mssql.version>
         <oracle.version>11.2.0.3</oracle.version>
         <springfox.version>2.8.0</springfox.version>
-        <commons-codec.version>1.4</commons-codec.version>
-        <commons.lang.version>2.6</commons.lang.version>
         <qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
         <aliyun.oss.version>2.5.0</aliyun.oss.version>
         <qcloud.cos.version>4.4</qcloud.cos.version>
@@ -45,7 +43,7 @@
         <t-io.version>3.2.4.v20181218-RELEASE</t-io.version>
         <redisson.version>3.5.4</redisson.version>
         <hutool.version>4.4.2</hutool.version>
-        <fastjson.version>1.2.49</fastjson.version>
+        <java-jwt.version>3.4.0</java-jwt.version>
     </properties>
 
     <dependencyManagement>
@@ -169,16 +167,6 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-codc</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>${commons-codec.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons.lang.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
@@ -193,10 +181,11 @@
                 <artifactId>tio-core</artifactId>
                 <version>${t-io.version}</version>
             </dependency>
+            <!--jwt-->
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${java-jwt.version}</version>
             </dependency>
 
             <!-- redis -->
