--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.weechang</groupId>
-            <artifactId>moreco-security</artifactId>
+            <artifactId>moreco-rbac</artifactId>
         </dependency>
     </dependencies>
 
