--- a/moreco-cloud/moreco-cloud-config/pom.xml
+++ b/moreco-cloud/moreco-cloud-config/pom.xml
@@ -13,10 +13,28 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.github.weechang</groupId>
+            <artifactId>moreco-base</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
-            <version>1.3.0.RELEASE</version>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
