--- a/moreco-cloud/moreco-cloud-gateway/pom.xml
+++ b/moreco-cloud/moreco-cloud-gateway/pom.xml
@@ -21,5 +21,10 @@
             <groupId>com.marcosbarbero.cloud</groupId>
             <artifactId>spring-cloud-zuul-ratelimit</artifactId>
         </dependency>
+        <!--feign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
