--- a/pom.xml
+++ b/pom.xml
@@ -46,20 +46,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--&lt;!&ndash;self&ndash;&gt;-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-core</artifactId>-->
-                <!--<version>${project.version}</version>-->
-            <!--</dependency>-->
-            <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>xyz.weechang</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>moreco-data</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>${project.version}</version>&ndash;&gt;-->
-                <!--&lt;!&ndash;<type>pom</type>&ndash;&gt;-->
-                <!--&lt;!&ndash;<scope>import</scope>&ndash;&gt;-->
-            <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-            <!--data-->
+            <!--self-->
             <dependency>
                 <groupId>xyz.weechang</groupId>
                 <artifactId>moreco-core</artifactId>
@@ -70,62 +57,11 @@
                 <artifactId>moreco-data-jpa</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-data-jpa</artifactId>-->
-                <!--<version>${project.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-data-redis</artifactId>-->
-                <!--<version>${project.version}</version>-->
-            <!--</dependency>-->
             <dependency>
                 <groupId>xyz.weechang</groupId>
                 <artifactId>moreco-component-swagger</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>xyz.moreco</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>moreco-component-rbac</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>${project.version}</version>&ndash;&gt;-->
-            <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-component-ops</artifactId>-->
-                <!--<version>${project.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-security</artifactId>-->
-                <!--<version>${project.version}</version>-->
-            <!--</dependency>-->
-            <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>xyz.weechang</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>moreco-starter</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>${project.version}</version>&ndash;&gt;-->
-                <!--&lt;!&ndash;<type>pom</type>&ndash;&gt;-->
-                <!--&lt;!&ndash;<scope>import</scope>&ndash;&gt;-->
-            <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-            <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>xyz.moreco</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>moreco-spring-boot-starter</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>${project.version}</version>&ndash;&gt;-->
-            <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-storage</artifactId>-->
-                <!--<version>${project.version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>xyz.weechang</groupId>-->
-                <!--<artifactId>moreco-monitor</artifactId>-->
-                <!--<version>${project.version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
 
             <!-- Spring storage -->
             <dependency>
