--- a/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
+++ b/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
     uri-encoding: UTF-8
     max-threads: 1000
     min-spare-threads: 30
+  port: 8080
+  connection-timeout: 5000ms
 
 spring:
   profiles:
