--- a/moreco-component/pom.xml
+++ b/moreco-component/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>moreco</artifactId>
         <groupId>xyz.weechang</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,6 +18,7 @@
         <module>moreco-component-rbac</module>
         <module>moreco-component-ops</module>
         <module>moreco-component-swagger</module>
+        <module>moreco-component-gen</module>
     </modules>
 
     <dependencyManagement>
