--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>moreco-demo</artifactId>
         <groupId>xyz.weechang</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -38,6 +38,11 @@
         <dependency>
             <groupId>xyz.weechang</groupId>
             <artifactId>moreco-security</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.weechang</groupId>
+            <artifactId>moreco-component-gen</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
