--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>xyz.weechang</groupId>
     <artifactId>moreco</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
 
     <modules>
         <module>moreco-core</module>
@@ -42,6 +42,7 @@
         <redisson.version>3.5.4</redisson.version>
         <hutool.version>4.4.2</hutool.version>
         <java-jwt.version>3.4.0</java-jwt.version>
+        <velocity.version>1.7</velocity.version>
     </properties>
 
     <dependencyManagement>
@@ -158,6 +159,11 @@
                 <groupId>org.t-io</groupId>
                 <artifactId>tio-core</artifactId>
                 <version>${t-io.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>velocity</artifactId>
+                <groupId>org.apache.velocity</groupId>
+                <version>${velocity.version}</version>
             </dependency>
             <!--jwt-->
             <dependency>
