--- a/moreco-data/moreco-data-mybatis/pom.xml
+++ b/moreco-data/moreco-data-mybatis/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>moreco-data-redis</artifactId>
+    <artifactId>moreco-date-mybatis</artifactId>
 
     <build>
         <plugins>
@@ -25,23 +25,16 @@
     </build>
 
     <dependencies>
+        <!--self-->
         <dependency>
             <groupId>xyz.weechang</groupId>
             <artifactId>moreco-data-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-        </dependency>
-        <!-- redis -->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-        </dependency>
+
+        <!--jpa-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
-
 </project>
