--- a/moreco-data/pom.xml
+++ b/moreco-data/pom.xml
@@ -17,6 +17,7 @@
         <module>moreco-data-jpa</module>
         <module>moreco-data-redis</module>
         <module>moreco-data-mongodb</module>
+        <module>moreco-data-mybatis</module>
     </modules>
 
     <dependencyManagement>
